--- a/web1/static/css/main.css
+++ b/web1/static/css/main.css
@@ -2231,11 +2231,12 @@ tr.visible-print {
     padding-left: 30px;
     line-height: 2.071428571428571;
     position: relative;
-    text-align: center;
+    text-align: center
 }
 
 .about .extra-info ul>li:before {
     content: "";
+    text-align: center;
     position: absolute;
     height: 100%;
     width: 3px;
@@ -2245,11 +2246,13 @@ tr.visible-print {
 }
 
 .about .extra-info ul>li>span {
+    text-align: center;
     display: block
 }
 
 .about .extra-info ul>li>span.head {
     text-transform: uppercase;
+    text-align: center;
     font-weight: 800
 }
 
