--- a/web1/static/css/main.css
+++ b/web1/static/css/main.css
@@ -2164,6 +2164,13 @@ tr.visible-print {
     right: -64%
 }
 
+.home .container {
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 40px;
+    width: 600
+}
+
 .home .cv-btn {
     text-align: center;
     text-transform: uppercase;
@@ -2236,7 +2243,6 @@ tr.visible-print {
 
 .about .extra-info ul>li:before {
     content: "";
-    text-align: center;
     position: absolute;
     height: 100%;
     width: 3px;
@@ -2246,7 +2252,6 @@ tr.visible-print {
 }
 
 .about .extra-info ul>li>span {
-    text-align: center;
     display: block
 }
 
@@ -2814,7 +2819,7 @@ span.invalid-error {
     }
 }
 
-@media screen and (max-width:900px) {
+@media screen and (max-width:767px) {
     .home .big-head {
         font-size: 57.6px
     }
