--- a/web1/static/css/main.css
+++ b/web1/static/css/main.css
@@ -2168,7 +2168,7 @@ tr.visible-print {
     text-align: center;
     text-transform: uppercase;
     margin-top: 40px;
-    width: 600
+    width: 600px
 }
 
 .home .cv-btn {
