--- a/web1/static/css/main.css
+++ b/web1/static/css/main.css
@@ -655,6 +655,7 @@ address {
     margin-right: auto;
     margin-left: auto;
     padding-left: 15px;
+    padding-top: 50px;
     padding-right: 15px
 }
 
